--- a/Trabajo Opcional/Trabajo Opcional.cbp
+++ b/Trabajo Opcional/Trabajo Opcional.cbp
@@ -36,11 +36,13 @@
 		</Compiler>
 		<Unit filename="include/Asteroide.h" />
 		<Unit filename="include/Funciones.h" />
+		<Unit filename="include/Juego.h" />
 		<Unit filename="include/Nave.h" />
 		<Unit filename="include/Proyectil.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Asteroide.cpp" />
 		<Unit filename="src/Funciones.cpp" />
+		<Unit filename="src/Juego.cpp" />
 		<Unit filename="src/Nave.cpp" />
 		<Unit filename="src/Proyectil.cpp" />
 		<Extensions>
